tests/valid/Process_Valid_4.whiley
void main([string] args):
    out->println("Hello World")
