tests/invalid/MethodCall_CompileFail_3.whiley
void main([string] this):
    this->f(1)
